--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @layer base {
   @font-face {
     font-family: halloweenFont;
-    src: url("../font/Slime\ and\ Blood.ttf");
+    src: url("../src/font/Slime\ and\ Blood.ttf");
   }
 
   body {
@@ -33,20 +33,16 @@
   }
 
   .card__side--front {
-    background-color: #fff;
     background-image: url("https://images.unsplash.com/photo-1635155313738-cfd999a53e56?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80");
   }
 
+  /* .card__side--back-1 {
+    background-image: url("../src/images/trickNTreat.jpg");
+  } */
   .card__side--back {
     color: #fff;
     transform: rotateY(180deg);
   }
-
-  .card__side--back-1 {
-    background-image: url("https://i.pinimg.com/564x/d6/3e/05/d63e0568a5eaaf1c0b2bdc8d6ccadb04.jpg");
-  }
-
-
 
   .card__description {
     text-transform: uppercase;
