--- a/src/index.css
+++ b/src/index.css
@@ -49,4 +49,13 @@
     font-size: 3em;
     padding: 1em 0;
   }
+
+  div.match
+
+  div.match.card__side--front-1 {
+    transform: rotateY(180deg) !important;
+  }
+  div.match.card__side--back-1 {
+    transform: rotate(0) !important;
+  }
 }
